--- a/war/Simulator.html
+++ b/war/Simulator.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Simulator</title>
     <script type="text/javascript" language="javascript" src="de.simulator.Simulator/de.simulator.Simulator.nocache.js"></script>
+    <link type="text/css" rel="stylesheet" href="simulator.css">
   </head>
 
   <body>
