--- a/war/Simulator.html
+++ b/war/Simulator.html
@@ -4,6 +4,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Simulator</title>
     <script type="text/javascript" language="javascript" src="de.simulator.Simulator/de.simulator.Simulator.nocache.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"> </script>
+	<script type="text/javascript" src="js/highcharts.js"></script>
   </head>
 
   <body>
