--- a/war/Simulator.html
+++ b/war/Simulator.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Simulator</title>
-    <script type="text/javascript" language="javascript" src="de.simulator.Simulator/de.simulator.Simulator.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="simulator/simulator.nocache.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"> </script>
 	<script type="text/javascript" src="js/highcharts.js"></script>
 	<script type="text/javascript" src="js/themes/gray.js"></script>
